Adding Inner Page Style

--- a/_includes/boot-header.html
+++ b/_includes/boot-header.html
@@ -16,6 +16,7 @@
 <link rel="canonical" href="http://bootstrapformhelpers.com{{ page.seo_url }}"/>
 
 <!-- Bootstrap core CSS -->
+<link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet" type="text/css">
 <link href="{{ page.base_url }}assets/css/bootstrap.min.css" rel="stylesheet">
 <link href="{{ page.base_url }}assets/css/bootstrap-formhelpers.min.css" rel="stylesheet">
 <link href="{{ page.base_url }}assets/css/boot.css" rel="stylesheet">
