--- a/_layouts/ndefault.html
+++ b/_layouts/ndefault.html
@@ -25,8 +25,10 @@
 <!-- End of Header -->
 
 <div class="container">
-  <div class="col-lg-3"><!-- Include the List --> 
-    {% include nav-plugin.html %} </div>
+  <div class="col-lg-3">
+  <!-- Include the List --> 
+    {% include nav-plugin.html %}
+    </div>
   <div class="col-lg-9"> {{ content }}</div>
   <div class="clearfix"></div>
 </div>
