Adding Inner Page Style

--- a/_layouts/ndefault.html
+++ b/_layouts/ndefault.html
@@ -33,7 +33,7 @@
   <div class="clearfix"></div>
 </div>
 
-<!-- The Footer --> 
+<!-- The Footer Elements --> 
 {% include footer.html %}
 <footer class="footer_well">
   <div class="container"> Designed and built by Wimmark LTD<br>
