--- a/_layouts/relay.html
+++ b/_layouts/relay.html
@@ -15,9 +15,15 @@
     
     <!-- Boot Navigation -->
     {% include boot-nav-main.html %}
-    
+    <div class="well bootheader row">
+  <div class="container">
+    <h1 style="color:#fff;">{{ page.title }}</h1>
+  </div>
+</div>
+<!-- End of Header -->
+
    <div class="container">
-         <div class="col-lg-3"></div>
+         <div class="col-lg-3">{% include nav-plugins.html %}</div>
          <div class="col-lg-9"> {{ content }} </div>
          </div>
           
