--- a/_layouts/relay.html
+++ b/_layouts/relay.html
@@ -15,6 +15,7 @@
     
     <!-- Boot Navigation -->
     {% include boot-nav-main.html %}
+    
     <div class="well bootheader row">
   <div class="container">
     <h1 style="color:#fff;">{{ page.title }}</h1>
@@ -23,9 +24,13 @@
 <!-- End of Header -->
 
    <div class="container">
-         <div class="col-lg-3">{% include nav-plugins.html %}</div>
+         <div class="col-lg-3">
+         <ul class="nav side-bar">
+              {% include nav-plugins.html %}
+          </ul>
+          </div>
          <div class="col-lg-9"> {{ content }} </div>
-         </div>
+   </div>
           
 
     <!-- The Footer -->
