Inner and Homepage Design Enhancement

--- a/_includes/boot-nav-main.html
+++ b/_includes/boot-nav-main.html
@@ -7,7 +7,7 @@
       </a> </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="http://www.bootstrapformhelpers.com">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="/support/">Support</a></li>
         <li class="active"><a onclick="ga('send', 'event', 'button', 'click', 'buy-small');" href="http://www.bootstrapformhelpers.com/buy"><span class="glyphicon glyphicon-flash flash"></span> Buy Now!</a></li>
       </ul>
