--- a/_layouts/relay.html
+++ b/_layouts/relay.html
@@ -21,6 +21,7 @@
     <h1>{{ page.title }}</h1>
   </div>
 </div>
+ {% include social-main.html %}
 <!-- End of Header -->
 
     <!-- Main content -->
@@ -46,7 +47,13 @@
 
 
 <footer class="footer_well">
-  <div class="container"> Designed and built by Wimmark LTD<br>
+  <div class="container"> 
+   <p>
+		<iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=vlamanna&amp;repo=BootstrapFormHelpers&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" style="width: 100px; height: 20px;"></iframe>
+	 
+		<iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=vlamanna&amp;repo=BootstrapFormHelpers&amp;type=fork&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" style="width: 98px; height: 20px;"></iframe>
+	 </p>
+    Designed and built by Wimmark LTD<br>
     Code licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License v2.0</a>. Documentation licensed under <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a>.<br>
     Icons from <a href="http://glyphicons.com/" target="_blank">Glyphicons Free</a>, licensed under <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a>.<br>
     Flags from <a href="http://www.gosquared.com/" target="_blank">GoSquared</a>, licensed under <a href="http://bootstrapformhelpers.com/assets/img/bootstrap-formhelpers-countries.flags-LICENSE.txt" target="_blank">GoSquared</a>.</div>
