Adding a new navlist layout

--- a/_layouts/relay.html
+++ b/_layouts/relay.html
@@ -30,7 +30,7 @@
         <div class="col-md-3">
           <div class="hidden-print" role="complementary">
             <ul class="nav side-bar">
-              {% include nav-plugins.html %}
+              {% include nav-list.html %}
             </ul>
           </div>
         </div>
