Link Updates in Nav

--- a/_includes/boot-nav-main.html
+++ b/_includes/boot-nav-main.html
@@ -9,7 +9,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/">Home</a></li>
         <li><a href="/support/">Support</a></li>
-        <li class="active"><a onclick="ga('send', 'event', 'button', 'click', 'buy-small');" href="http://www.bootstrapformhelpers.com/buy"><span class="glyphicon glyphicon-flash flash"></span> Buy Now!</a></li>
+        <li class="active"><a onclick="ga('send', 'event', 'button', 'click', 'buy-small');" href="/buy/"><span class="glyphicon glyphicon-flash flash"></span> Buy Now!</a></li>
       </ul>
     </div>
   </div>
