--- a/_layouts/relay.html
+++ b/_layouts/relay.html
@@ -21,6 +21,7 @@
     <h1>{{ page.title }}</h1>
   </div>
 </div>
+ {% include social-main.html %}
 <!-- End of Header -->
 
     <!-- Main content -->
