Removed Bug in Homepage Layout

--- a/_layouts/nitsef.html
+++ b/_layouts/nitsef.html
@@ -4,7 +4,7 @@
     <!-- Meta, title, CSS, favicons, etc. -->
     {% include boot-header.html %}
   </head>
-  <body>zz
+  <body>
     <!-- Start Alexa Certify Javascript -->
     <script type="text/javascript">
     _atrk_opts = { atrk_acct:"uQnbh1acOh00wy", domain:"bootstrapformhelpers.com",dynamic: true};
