Applied the New to Design
Updated the Index file with the new design
Added Logo Link to Nav

--- a/_includes/boot-nav-main.html
+++ b/_includes/boot-nav-main.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/">
       <h3>Bootstrap Form Helper <sup>V2.3.0</sup> </h3>
       </a> </div>
     <div class="navbar-collapse collapse">
