Modified Bili Layout

--- a/_layouts/bili.html
+++ b/_layouts/bili.html
@@ -16,12 +16,11 @@
     <!-- Boot Navigation -->
     {% include boot-nav-main.html %}
     
-    <div class="well bootheader row">
+    <div class="well bootheader row" style="padding:0;">
   <div class="container">
     <h1>{{ page.title }}</h1>
   </div>
 </div>
-{% include social-main.html %}
 <!-- End of Header -->
 
     <!-- Main content -->
