Deploy Adsense Codes

--- a/_layouts/nitsef.html
+++ b/_layouts/nitsef.html
@@ -19,7 +19,7 @@
    
           {{ content }}
           
-
+<hr>{% include ads-leaderboard.html %}
     <!-- The Footer -->
     {% include footer.html %}
 
