--- a/_layouts/relay.html
+++ b/_layouts/relay.html
@@ -36,6 +36,9 @@
         </div>
         <div class="col-md-9" role="main">
           {{ content }}
+          
+          <hr>
+          {% include ads-leaderboard.html %}
         </div>
       </div>
     </div>
