Add Adsense code to Footer

--- a/_layouts/bili.html
+++ b/_layouts/bili.html
@@ -26,6 +26,8 @@
     <!-- Main content -->
     <div class="container">    
           {{ content }}
+           <hr>
+          {% include ads-leaderboard.html %}
     </div>
           
 
