Centralize Adsense codes

--- a/_layouts/bili.html
+++ b/_layouts/bili.html
@@ -27,7 +27,7 @@
     <div class="container">    
           {{ content }}
            <hr>
-          {% include ads-leaderboard.html %}
+         <center> {% include ads-leaderboard.html %}</center>
     </div>
           
 
