--- a/_layouts/nitsef.html
+++ b/_layouts/nitsef.html
@@ -19,7 +19,7 @@
    
           {{ content }}
           
-<hr>{% include ads-leaderboard.html %}
+<hr> <center> {% include ads-leaderboard.html %}</center>
     <!-- The Footer -->
     {% include footer.html %}
 
