--- a/_layouts/relay.html
+++ b/_layouts/relay.html
@@ -38,7 +38,7 @@
           {{ content }}
           
           <hr>
-          {% include ads-leaderboard.html %}
+           <center> {% include ads-leaderboard.html %}</center>
         </div>
       </div>
     </div>
