--- a/_includes/boot-header.html
+++ b/_includes/boot-header.html
@@ -17,7 +17,7 @@
 
 <!-- Bootstrap core CSS -->
 <link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet" type="text/css">
-<link href="{{ page.base_url }}assets/css/bootstrap.min.css" rel="stylesheet">
+<link href="{{ page.base_url }}assets/css/bootstrap.min.css?=12" rel="stylesheet">
 <link href="{{ page.base_url }}assets/css/bootstrap-formhelpers.min.css" rel="stylesheet">
 <link href="{{ page.base_url }}assets/css/boot.css" rel="stylesheet">
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
