Highlight added to WP Button

--- a/_includes/boot-plugin-list.html
+++ b/_includes/boot-plugin-list.html
@@ -19,7 +19,7 @@
   <div class="row">
     <div class="col-lg-3"><a href="{{ page.base_url }}language/" type="button" class="btn btn-default btn-block  bottom_top"><span class="glyphicon glyphicon-star-empty emptystar"></span> Language Picker</a></div>
     <div class="col-lg-3"><a href="{{ page.base_url }}timepicker/" type="button" class="btn btn-default btn-block  bottom_top"><span class="glyphicon glyphicon-star-empty emptystar"></span> Time Picker</a></div>
-    <div class="col-lg-3"><a href="{{ page.base_url }}phone/" type="button" class="btn btn-default btn-block  bottom_top"><span class="glyphicon glyphicon-star-empty emptystar"></span> Phone Input</a></div>
+    <div class="col-lg-3"><a href="{{ page.base_url }}phone/" type="button" class="btn btn-warning btn-block  bottom_top"><span class="glyphicon glyphicon-star-empty emptystar"></span> Phone Input</a></div>
     <div class="col-lg-3"><a href="{{ page.base_url }}wordpressplugin/" type="button" class="btn btn-default btn-block  bottom_top"><span class="glyphicon glyphicon-star-empty star"></span> Wordpress Plugin</a></div>
     
   </div>
