includes/ads-leaderboard.html
replaced the ads on line 1 to 10

new ads is on line 12

--- a/_includes/ads-leaderboard.html
+++ b/_includes/ads-leaderboard.html
@@ -1,9 +1,12 @@
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!--script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- AdsLeaderboard-728x90 -->
-<ins class="adsbygoogle"
+<!--ins class="adsbygoogle"
      style="display:inline-block;width:728px;height:90px"
      data-ad-client="ca-pub-6835174711968682"
      data-ad-slot="1530981641"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script-->
+
+
+<script type="text/javascript" src="http://clkrev.com/adServe/banners?tid=WINMARKLTD_10283_0&size=728x90" ></script>
