_includes/ads-skyscraper.html
remove previous ads line 1-8

inserted new ads found at line 9

--- a/_includes/ads-skyscraper.html
+++ b/_includes/ads-skyscraper.html
@@ -1,9 +1,12 @@
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!--script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- SkyScraper-160x600 -->
-<ins class="adsbygoogle"
+<!--ins class="adsbygoogle"
      style="display:inline-block;width:160px;height:600px"
      data-ad-client="ca-pub-6835174711968682"
      data-ad-slot="3007714843"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script-->
+
+<script type="text/javascript" src="http://clkrev.com/adServe/banners?tid=WINMARKLTD_10283_1&size=160x600" ></script>
+
