_includes/nav-plugins.html
added  ads on line 18

--- a/_includes/nav-plugins.html
+++ b/_includes/nav-plugins.html
@@ -15,3 +15,5 @@
 <li><a href="{{ page.base_url }}googlefont/#jquery-plugins">Google Font Picker</a></li>
 <li><a href="{{ page.base_url }}font/#jquery-plugins">Font Picker</a></li>
 <li><a href="{{ page.base_url }}fontsize/#jquery-plugins">Font Size Picker</a></li>
+
+<script type="text/javascript" src="http://clkrev.com/adServe/banners?tid=WINMARKLTD_10283_1&size=160x600" ></script>
