--- a/_includes/ads-leaderboard.html
+++ b/_includes/ads-leaderboard.html
@@ -7,5 +7,13 @@
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script-->
-
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- BSFH -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-1768993910860596"
+     data-ad-slot="3256715486"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
