--- a/_includes/ads-skyscraper.html
+++ b/_includes/ads-skyscraper.html
@@ -7,5 +7,12 @@
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script-->
-
-
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- 160x600 BSFH1 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:160px;height:600px"
+     data-ad-client="ca-pub-1768993910860596"
+     data-ad-slot="9163648286"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
