--- a/_includes/nav-list.html
+++ b/_includes/nav-list.html
@@ -17,5 +17,13 @@
 <li class="list-group-item"><a href="{{ page.base_url }}font/#jquery-plugins">Font Picker</a></li>
 <li class="list-group-item"><a href="{{ page.base_url }}fontsize/#jquery-plugins">Font Size Picker</a></li>
 </ul>
-
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- 160x600 BSFH1 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:160px;height:600px"
+     data-ad-client="ca-pub-1768993910860596"
+     data-ad-slot="9163648286"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
