--- a/_layouts/relay.html
+++ b/_layouts/relay.html
@@ -35,6 +35,8 @@
           </div>
         </div>
         <div class="col-md-9" role="main">
+        {% include ads-leaderboard.html %}
+        
           {{ content }}
           
           <hr>
