--- a/_includes/boot-header.html
+++ b/_includes/boot-header.html
@@ -43,3 +43,39 @@
 
 </script>
 
+<script language="javascript">
+    function setCookie(c_name,value,exdays)
+    {
+      var exdate=new Date();
+      exdate.setDate(exdate.getDate() + exdays);
+      var c_value=escape(value) + 
+        ((exdays==null) ? "" : ("; expires="+exdate.toUTCString()));
+      document.cookie=c_name + "=" + c_value;
+    }
+
+    function getCookie(c_name)
+    {
+     var i,x,y,ARRcookies=document.cookie.split(";");
+     for (i=0;i<ARRcookies.length;i++)
+     {
+      x=ARRcookies[i].substr(0,ARRcookies[i].indexOf("="));
+      y=ARRcookies[i].substr(ARRcookies[i].indexOf("=")+1);
+      x=x.replace(/^\s+|\s+$/g,"");
+      if (x==c_name)
+      {
+       return unescape(y);
+      }
+     }
+    }
+	
+	function getParameterByName(name) {
+		var match = RegExp('[?&]' + name + '=([^&]*)').exec(window.location.search);
+		return match && decodeURIComponent(match[1].replace(/\+/g, ' '));
+	}	
+
+	var qs = window.getParameterByName("source");
+	if(qs){
+		setCookie("source",qs,60);
+	}
+</script>
+
