--- a/less/bootstrap-formhelpers-googlefonts.less
+++ b/less/bootstrap-formhelpers-googlefonts.less
@@ -2,13 +2,15 @@
 // Google Fonts
 // --------------------------------------------------
 
-.bfh-googlefonts .bfh-selectbox-options {
+.bfh-googlefonts .bfh-selectbox-options,
+.bfh-googlefontlist /* Donna */ {
   a {
     height: 30px;
-    width: 230px;
+    /* width: 230px; */ /* Donna */
     text-indent: -9999px;
     background-image: url(../img/bootstrap-formhelpers-googlefonts.png);
-    
+    background-repeat: no-repeat; /* Donna */
+
     &:focus {
       background-repeat: no-repeat;
       filter: none;
@@ -26,3 +28,15 @@
   background-color: transparent;
   outline: none;
 }
+
+/* Donna Start */
+.bfh-googlefontlist {
+  max-height: 400px;
+  overflow: auto;
+  cursor: pointer;
+
+  a:hover {
+    background-color: transparent;
+  }
+}
+/* Donna End */
