--- a/_includes/boot-plugin-list.html
+++ b/_includes/boot-plugin-list.html
@@ -8,7 +8,7 @@
     <div class="col-lg-3"><a href="{{ page.base_url }}googlefont/" type="button" class="btn btn-default btn-block  bottom_top">Google Font Picker</a></div>
     <div class="col-lg-3"><a href="{{ page.base_url }}font/" type="button" class="btn btn-default btn-block  bottom_top">Font Picker</a></div>
     <div class="col-lg-3"><a href="{{ page.base_url }}datepicker/" type="button" class="btn btn-default btn-block  bottom_top">Date Picker</a></div>
-    <div class="col-lg-3"><a href="{{ page.base_url }}fontsize/" type="button" class="btn btn-default btn-block  bottom_top">Font Size Picker</a></div>
+    <div class="col-lg-3"><a href="{{ page.base_url }}fontsize/" type="button" class="btn btn-default btn-block  bottom_top"><span class="glyphicon glyphicon-star-empty emptystar"></span> Font Size Picker</a></div>
   </div>
   <div class="row">
     <div class="col-lg-3"><a href="{{ page.base_url }}country/" type="button" class="btn btn-default btn-block  bottom_top"><span class="glyphicon glyphicon-star-empty emptystar"></span> Country Picker</a></div>
