Bootstrapformhelpers.com upgrade

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,8 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="{{ page.base_url }}assets/js/jquery-1.10.2.min.js"></script>
+<!-- <script src="{{ page.base_url }}assets/js/jquery-1.10.2.min.js"></script> -->
+<script src="{{ page.base_url }}assets/js/jquery-3.3.1.min.js"></script>
 <script src="{{ page.base_url }}assets/js/bootstrap.min.js"></script>
 <script src="{{ page.base_url }}assets/js/bootstrap-formhelpers.min.js"></script>
 
