--- a/assets/css/boot.css
+++ b/assets/css/boot.css
@@ -105,6 +105,9 @@ border-bottom: 1px solid #ddd;
 border-bottom: 1px solid #ddd;
 margin: -20px 0 20px;
 }
+.pb30 {
+	padding-bottom: 30px;
+}
 /* ================================
 					FOOTER
 ==================================== */
