privacy policy update v1.3

--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -14,6 +14,7 @@
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav">
       <li><a href="/">Home</a></li>
+      <li><a href="/privacy/">Privacy Policy</a></li>
       <li><a href="/support/">Support</a></li>
       <li><button onclick="ga('send', 'event', 'button', 'click', 'buy-small'); window.location.href = '/buy/';" class="btn btn-success navbar-btn">Buy</a></button>
     </ul>
