--- a/_layouts/nitsef.html
+++ b/_layouts/nitsef.html
@@ -32,9 +32,13 @@
 	 
 		<iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=vlamanna&amp;repo=BootstrapFormHelpers&amp;type=fork&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" style="width: 98px; height: 20px;"></iframe>
 	 </p>
+    <div style="margin-bottom: 19px;">
+      <a href="/privacy/">Privacy Policy</a><span style="color: #428bca;">&nbsp;&nbsp;|&nbsp;&nbsp;</span><a href="/privacy/">Support</a>
+    </div>
     Code licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License v2.0</a>. Documentation licensed under <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a>.<br>
     Icons from <a href="http://glyphicons.com/" target="_blank">Glyphicons Free</a>, licensed under <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a>.<br>
     Flags from <a href="http://www.gosquared.com/" target="_blank">GoSquared</a>, licensed under <a href="http://bootstrapformhelpers.com/assets/img/bootstrap-formhelpers-countries.flags-LICENSE.txt" target="_blank">GoSquared</a>.</div>
+    <br><br>
 </footer>
 
 
